@@ -331,6 +331,9 @@ Bug Fixes
     field using bogus fieldtype and multiple copyFields to a non-multiValue
     field.  (Shalin Shekhar Mangar via hossman)
 
+23. SOLR-528: Better error message when defaultSearchField is bogus or not
+    indexed.  (Lars Kotthoff via hossman)
+    
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
